<resources>
    <string name="app_name">ThuanVoApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="description">Image description</string>
    <string name="my_name">Thuan Vo</string>
    <string name="about">Language:</string>
    <string name="contact">Contact:</string>
    <string name="email">tvo93@uw.edu</string>
    <string name="phone">(206) 972 7731</string>
    <string name="home">"Home"</string>
    <string name="feedback">Feedback</string>

    <string name="intro1">IT major at University of Washington Tacoma</string>
    <string name="intro2">Seeking for an internship or FT job</string>
    <string name="content1">Career Interest:</string>
    <string name="content2">Web Development</string>
    <string name="content3">Software Engineering</string>
    <string name="content4">Infrastructure </string>
    <string name="content5">Database Development</string>
    <string name="content6">Vietnamese </string>
    <string name="content7">English</string>

    <string name="about_me">ABOUT ME</string>
    <string name="project">Project Overview</string>
    <string name="resume">My Resume</string>
    <string name="cover">Cover Letter</string>
    <string name="link">LinkedIn</string>
    <string name="git">GitHub</string>


    <string name="q1">What is your overall rating for me on this project?
        \n (Scale from 1 to 3)</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="q2">As an employer, were you able to find the information you were
        looking for on my app?</string>
    <string name="q3">How did this effort compare to your expectations?</string>
    <string name="q4">What aspects do you want me to improve?</string>
    <string name="q5">What aspects do you like the most?</string>
    <string name="q6">Other Comment</string>
    <string name="tq">THANK YOU</string>
    <string name="submit">SUBMIT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
