<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:itemBackground="@color/textColor"
    tools:showIn="navigation_view">

    <item android:title="@string/about_me">
    <menu>
        <item
            android:id="@+id/resume"
            android:icon="@drawable/resume"
            android:title="@string/resume" />
        <item
            android:id="@+id/cover"
            android:icon="@drawable/cover"
            android:title="@string/cover" />
        <item
            android:id="@+id/link"
            android:icon="@drawable/link"
            android:title="@string/link" />
        <item
            android:id="@+id/git"
            android:icon="@drawable/link"
            android:title="@string/git" />
        <item
            android:id="@+id/project"
            android:icon="@drawable/ic_show_chart_black_24dp"
            android:title="@string/project" />
    </menu>
    </item>

</menu>
