<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="interview.handimaps.thuanvoapp.FeedbackFragment"
        android:layout_width="fill_parent"
        android:gravity="top"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        android:paddingBottom="@dimen/imageWidth"
        android:paddingLeft="@dimen/paddingHorizontal"
        android:paddingRight="@dimen/paddingHorizontal"
        android:paddingTop="@dimen/paddingVertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedback"
            android:textAlignment="center"
            android:textColor="@color/titleColor"
            android:textSize="@dimen/title_font"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:background="@drawable/textbox"
            android:paddingLeft="@dimen/paddingSubVertical"
            android:paddingRight="@dimen/paddingSubVertical"
            android:paddingTop="@dimen/paddingSubVertical"
            android:paddingBottom="@dimen/paddingSubVertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q1"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_font"
                android:textStyle="bold|italic" />
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/num1"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/text_font"
                    android:layout_height="wrap_content"
                    android:text="@string/num1"
                    />
                <RadioButton
                    android:id="@+id/num2"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/text_font"
                    android:layout_height="wrap_content"
                    android:text="@string/num2"
                    />
                <RadioButton
                    android:id="@+id/num3"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/text_font"
                    android:layout_height="wrap_content"
                    android:text="@string/num2"
                    />
            </RadioGroup>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q2"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_font"
                android:textStyle="bold|italic" />
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/yes"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/text_font"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    />
                <RadioButton
                    android:id="@+id/no"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/text_font"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    />
            </RadioGroup>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q3"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_font"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/edtQuestion3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/imageHeight"
                android:background="@drawable/sub_text_box"
                android:inputType="textMultiLine"
                android:paddingLeft="@dimen/space"
                android:paddingRight="@dimen/space"
                android:paddingStart="@dimen/space"
                android:textColor="@color/textColor"
                android:textColorHint="#09090a"
                android:textSize="@dimen/text_font"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q4"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_font"
                android:textStyle="bold|italic" />
            <EditText
                android:id="@+id/edtQuestion4"
                android:layout_width="match_parent"
                android:layout_height="@dimen/imageHeight"
                android:paddingLeft="@dimen/space"
                android:paddingRight="@dimen/space"
                android:paddingStart="@dimen/space"
                android:background="@drawable/sub_text_box"
                android:inputType="textMultiLine"
                android:textColor="@color/textColor"
                android:textColorHint="#09090a"
                android:textSize="@dimen/text_font"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q5"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_font"
                android:textStyle="bold|italic" />
            <EditText
                android:id="@+id/edtQuestion5"
                android:layout_width="match_parent"
                android:layout_height="@dimen/imageHeight"
                android:paddingLeft="@dimen/space"
                android:paddingRight="@dimen/space"
                android:paddingStart="@dimen/space"
                android:background="@drawable/sub_text_box"
                android:inputType="textMultiLine"
                android:textColor="@color/textColor"
                android:textColorHint="#09090a"
                android:textSize="@dimen/text_font"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q6"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_font"
                android:textStyle="bold|italic" />
            <EditText
                android:id="@+id/edtQuestion6"
                android:layout_width="match_parent"
                android:layout_height="@dimen/imageHeight"
                android:background="@drawable/sub_text_box"
                android:inputType="textMultiLine"
                android:paddingLeft="@dimen/space"
                android:paddingRight="@dimen/space"
                android:paddingStart="@dimen/space"
                android:textColor="@color/textColor"
                android:textColorHint="#09090a"
                android:textSize="@dimen/text_font"/>

        </LinearLayout>
        <Button
            android:id="@+id/button"
            android:layout_width="@dimen/imageWidth"
            android:layout_height="@dimen/imageHeight"
            android:text="@string/submit"
            android:layout_marginTop="@dimen/space"
            android:background="@drawable/button"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>
</ScrollView>